k8s/test/service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${PROJECT_NAME}-performance-service
  namespace: ${K8S_NAMESPACE}
  labels:
    app: ${PROJECT_NAME}-performance
spec:
  selector:
    app: ${PROJECT_NAME}-performance
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: ClusterIP
